fixed height issues and header content of the alignment

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -104,9 +104,8 @@ $font-size: 16px;
 }
 
 .mat-slide-toggle {   
-  position: absolute;
   display: flex;
-  bottom: 50px;
+  margin-top:50px;
 }
 
 .white-text {
@@ -117,4 +116,5 @@ $font-size: 16px;
   padding: 25px;
   background-color: $main-content-background;
   height: calc(100vh);
+  overflow-y: auto;
 }
