--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 @import 'tailwindcss/utilities';
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0;padding:0;height:100%; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .apexcharts-legend.apx-legend-position-bottom.apexcharts-align-center{
     display: none;
